--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img17.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img17.html
@@ -5,21 +5,13 @@
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
   <title>Vision</title>
     <script src="../../js/jquery-1.8.3.js"></script>
-  <style>
-  	iframe{
-  		/* border-width: 2px;
-  		border-style: dashed; */
-  		width: 90%;
-  		height: 700px;
-  		margin-top: 40px;
-  	}
-  	#stats{
-  		width: 90%;
-  	}
-  </style>
+
 </head>
 <body>
 <center>
-	<iframe id='liveStats' src='http://www.worldometers.info'></iframe>
+  <div style="width: 700px; height: 1500px; overflow: hidden; margin-top: 150px;">
+  	<iframe id='liveStats' src='http://www.worldometers.info' height = 300px; width = 700px scrolling = 'no'  style="position: relative; left: -10%; top: -10%"></iframe>
+  </div>
+</center>
 </body>
 </html>
