Started to convert main presentation into new

--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/SliteShow_PitchDeck.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/SliteShow_PitchDeck.html
@@ -12,12 +12,13 @@
   	}
 
   	img{
-  		width: 100%;
+      padding-top: 100px;
+  		width: 70%;
+      height: 70%;
   	}
   </style>
 </head>
 <body>
-<center>
-<center><img src="img0.jpg" alt=""></center>
+<center><img src="../img/SliteLogo_Subtitle.gif" alt="slite logo"></center>
 </body>
 </html>
