--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img1.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img1.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <center>
-<center><img src="img1.jpg" alt=""></center>
+<center><img src="../SliteLogo.gif" alt=""></center>
 </body>
 </html>
