--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img2.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img2.html
@@ -3,14 +3,16 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Solution:
-SLITE web presentation</title>
+  <title>SLITE web presentation</title>
+  <style>
+  	body, html {
+  		margin: 0; padding: 0; height: 100%; overflow: hidden;
+  	}
+  </style>
 </head>
-<body>
+<body style="margin: 0">
 <center>
-<center><img src="img2.jpg" alt="">
-<iframe width="420" height="345"
-src="http://www.youtube.com/embed/IYUBioWs7Gs">
+<iframe width="100%: "height: "100%" framborder="0" src="http://slite.us">
 </iframe>
 </center>
 </body>
