--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
@@ -4,9 +4,46 @@
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
   <title>Slide 4</title>
+  <style>
+  	.title{
+  		padding-top: 100px;
+  		text-shadow: 0.05em 0.05em #333;
+  		font-weight: bold;
+  		font-size: 48px;
+  		color: darkblue;
+  	}
+
+  	.slideBody{
+  		vertical-align: left;
+  		text-align: left;
+  		font-size: 2vw;
+  		padding-left: 200px;
+  		padding-top: 50px;
+  	}
+  </style>
 </head>
 <body>
 <center>
-<center><img src="img3.jpg" alt=""></center>
+	<div class="title">SOLUTION: SLITE</div>
+	<div class="slideBody">
+		<ul>
+	      <li>NEW PARADIGM!</li>
+		      <ul>
+		           <li><strike>SLIDE = film slide</strike></li>
+		           <li><strike>SLIDE = wepage with infinite powers of the web/strike></li>
+		           <li><strike>SLIDE = <b>dynamic window</b> into the world</strike></li>
+		      </ul>
+	      <li>WEB PORTAL</li>
+	         <ul>
+	           <li>create</li>
+	           <li>present</li>
+	           <li>distribute</li>
+	        </ul>
+	     </li>
+	     <li>myItem 3</li>
+	     <li>myItem 4</li>
+		</ul>
+	</div>
+</center>
 </body>
 </html>
