New slides (old are in separate folder)

--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html.old/img2.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html.old/img2.html
@@ -5,15 +5,14 @@
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
   <title>SLITE web presentation</title>
   <style>
-  	body, html {
+  	body, html, center {
   		margin: 0; padding: 0; height: 100%; overflow: hidden;
   	}
   </style>
 </head>
 <body style="margin: 0">
 <center>
-<iframe width="100%: "height: "100%" framborder="0" src="http://slite.us">
-</iframe>
+<iframe style="overflow:hidden" height="100%" width="100%" framborder="3" src="http://slite.us"></iframe>
 </center>
 </body>
 </html>
