--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html.old/img3.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html.old/img3.html
@@ -4,7 +4,23 @@
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
   <title>Slide 4</title>
-  <link rel="stylesheet" type="text.css" href="./css/slide.css">
+  <style>
+  	.title{
+  		padding-top: 100px;
+  		text-shadow: 0.05em 0.05em #333;
+  		font-weight: bold;
+  		font-size: 48px;
+  		color: darkblue;
+  	}
+
+  	.slideBody{
+  		vertical-align: left;
+  		text-align: left;
+  		font-size: 2vw;
+  		padding-left: 200px;
+  		padding-top: 50px;
+  	}
+  </style>
 </head>
 <body>
 <center>
@@ -15,7 +31,7 @@
 		      <ul>
 		           <li><strike>SLIDE = film slide</strike></li>
 		           <li>SLIDE = wepage with infinite powers of the web</li>
-		           <li>SLIDE = <b>dynamic window</b> into the world</li>
+		           <li>SLIDE = <b>dynamic window</b> into the world<</li>
 		      </ul>
 	      <li>WEB PORTAL</li>
 	         <ul>
@@ -24,6 +40,8 @@
 	           <li>distribute</li>
 	        </ul>
 	     </li>
+	     <li>myItem 3</li>
+	     <li>myItem 4</li>
 		</ul>
 	</div>
 </center>
