--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img4.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img4.html
@@ -3,10 +3,16 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slide 5</title>
+  <title>SLITE web presentation</title>
+  <style>
+  	body, html, center {
+  		margin: 0; padding: 0; height: 100%; overflow: hidden;
+  	}
+  </style>
 </head>
-<body>
+<body style="margin: 0">
 <center>
-<center><img src="img4.jpg" alt=""></center>
+<iframe style="overflow:hidden" height="100%" width="100%" framborder="3" src="http://codepad.org"></iframe>
+</center>
 </body>
 </html>
