--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
@@ -3,47 +3,16 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slide 4</title>
+  <title>SLITE web presentation</title>
   <style>
-  	.title{
-  		padding-top: 100px;
-  		text-shadow: 0.05em 0.05em #333;
-  		font-weight: bold;
-  		font-size: 48px;
-  		color: darkblue;
-  	}
-
-  	.slideBody{
-  		vertical-align: left;
-  		text-align: left;
-  		font-size: 2vw;
-  		padding-left: 200px;
-  		padding-top: 50px;
+  	body, html, center {
+  		margin: 0; padding: 0; height: 100%; overflow: hidden;
   	}
   </style>
 </head>
-<body>
+<body style="margin: 0">
 <center>
-	<div class="title">SOLUTION: SLITE</div>
-	<div class="slideBody">
-		<ul>
-	      <li>NEW PARADIGM!</li>
-		      <ul>
-		           <li><strike>SLIDE = film slide</strike></li>
-		           <li><strike>SLIDE = wepage with infinite powers of the web/strike></li>
-		           <li><strike>SLIDE = <b>dynamic window</b> into the world</strike></li>
-		      </ul>
-	      <li>WEB PORTAL</li>
-	         <ul>
-	           <li>create</li>
-	           <li>present</li>
-	           <li>distribute</li>
-	        </ul>
-	     </li>
-	     <li>myItem 3</li>
-	     <li>myItem 4</li>
-		</ul>
-	</div>
+<iframe style="overflow:hidden" height="100%" width="100%" framborder="3" src="http://slite.us"></iframe>
 </center>
 </body>
 </html>
