--- a/BACKEND/FRONTEND/www/A1/index.html
+++ b/BACKEND/FRONTEND/www/A1/index.html
@@ -273,12 +273,7 @@
   	<div id="video-gallery" class="royalSlider videoGallery rsDefault"></div>
 
 	<div id="comments">
-		<!-- begin htmlcommentbox.com -->
-		 <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
-		 <link rel="stylesheet" type="text/css" href="http://www.htmlcommentbox.com/static/skins/default/skin.css" />
-		 <script type="text/javascript" language="javascript" id="hcb"> 
-		 /*<!--*/ if(!window.hcb_user){hcb_user={  };} (function(){s=document.createElement("script");s.setAttribute("type","text/javascript");s.setAttribute("src", "http://www.htmlcommentbox.com/jread?page="+escape((window.hcb_user && hcb_user.PAGE)||(""+window.location)).replace("+","%2B")+"&opts=470&num=10");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-		<!-- end htmlcommentbox.com -->
+			<!-- Begin Comments JavaScript Code --><script type="text/javascript" async>function ajaxpath_54064fd131a80(url){return window.location.href == '' ? url : url.replace('&s=','&s=' + escape(window.location.href));}(function(){document.write('<div id="fcs_div_54064fd131a80"><a title="free comment script" href="http://www.freecommentscript.com">&nbsp;&nbsp;<b>Free HTML User Comments</b>...</a></div>');fcs_54064fd131a80=document.createElement('script');fcs_54064fd131a80.type="text/javascript";fcs_54064fd131a80.src=ajaxpath_54064fd131a80("http://www.freecommentscript.com/GetComments2.php?p=54064fd131a80&s=&Size=10#!54064fd131a80");setTimeout("document.getElementById('fcs_div_54064fd131a80').appendChild(fcs_54064fd131a80)",1);})();</script><noscript><div><a href="http://www.freecommentscript.com" title="free html user comment box">Free Comment Script</a></div></noscript><!-- End Comments JavaScript Code -->
 	</div> 
 
 	<div id="commentsPanel"></div>
