--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html.old/img4.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html.old/img4.html
@@ -3,10 +3,10 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slide 5</title>
+  <title>Slite: Sharing diagram</title>
 </head>
 <body>
 <center>
-<center><img src="img4.jpg" alt=""></center>
+<center><img src="../img/Slite_ShareSlide.gif" alt=""></center>
 </body>
 </html>
