--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img12.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img12.html
@@ -3,17 +3,19 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slide 4</title>
+  <title>Slite: Presnter Control</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
 </head>
 <body>
 <center>
-	<div class="title">MONITIZATION</div>
+	<div class="title">FEATURES: PRESENTER CONTROL</div>
+	<div style="font-size:40px; font-weight: bold">smartphone app</div>
 	<div class="slideBody">
 		<ul>
-	      <li>FREEMEUM</li>
-	      <li>IN SLIDE ADS (350 slides / sec)</li>
-	     <li>ENTERPRISE SOLUTION (B2B)</li>
+	      <li>LASER POINTER</li>
+	      <li>DRAWING</li>
+	     <li>CLIKCER</li>
+	     <li>VOICE COMMANDS</li>
 		</ul>
 	</div>
 </center>
