--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img13.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img13.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <center>
-	<div class="title">TEAM</div>
+	<div class="title">SOCIAL</div>
 	<div class="slideBody">
 		<ul>
-	      <li>6 PEOPLE</li>
-	      <li>2 PHDs</li>
-	     <li>60+ YRS SOFTWARE, 30+ YRS BUSINESS</li>
+	      <li>VIDEO CONFERENCING</li>
+	      <li>COMMENTS / DISCUSSIONS (LIVE!)</li>
+	     <li>CLOSED CAPTIONING</li>
+	     <li>LIVE TRANSLATION</li>
 		</ul>
-		<img src="../img/slite_team_experience_companies.jpg" style='float:right'>
 	</div>
 </center>
 </body>
