--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img14.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img14.html
@@ -3,21 +3,24 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slide 4</title>
+  <title>Slite: Business Model and Monitization</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
 </head>
 <body>
 <center>
-	<div class="title">MARKET</div>
+	<div class="title" style='padding-top: 20px'>BUSINESS MODEL</div>
 	<div class="slideBody">
 		<ul>
-	      <li><b>$2.5 BILLION</b> IN 2014</li>
-	      <li>PROJECTED <b>$5 BILLION<b> IN 2016<</li>
-	     	<ul>We plan to take 3.5% of the market in 24 month = <b>$175 million</b></ul>
+	      <li>SAAS (direct sales from website)</li>
+	      <li>WHITE LABELING (licensing of internal Intranet solution)</li>
 		</ul>
-
+	</div>
+	<div class="title" style='padding-top: 20px'>MONITIZATION</div>
+	<div class="slideBody">
 		<ul>
-			<li>ASKING: <b>$500,000</b> for 9 month</li>
+	      <li>FREEMEUM (B2C)</li>
+	      <li>IN SLIDE ADS (350 slides / sec)</li>
+	     <li>SECURED ENTERPRISE SOLUTION PACKAGES (B2B)</li>
 		</ul>
 	</div>
 </center>
