--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img15.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img15.html
@@ -3,19 +3,20 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Sharing Diagram</title>
+  <title>Slite: Team</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-  <style>
-  	li{
-  		padding: 3px;
-  	}
-  </style>
 </head>
 <body>
 <center>
-	<div class="title">SOLUTION: SLITE (SHARE)</div>
+	<div class="title">TEAM</div>
 	<div class="slideBody">
-		<center><img src="../img/Slite_ShareSlide.gif" alt="slite share diagram" style='padding-right:120px'></cetner>
+		<ul>
+	      <li>6 PEOPLE</li>
+	      <li>2 PHDs</li>
+	     <li>60+ YRS SOFTWARE, 30+ YRS BUSINESS</li>
+	     <li>All located in Silicon Valley</li>
+		</ul>
+		<img src="../img/slite_team_experience_companies.jpg" style='float:right'>
 	</div>
 </center>
 </body>
