--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img7.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img7.html
@@ -3,19 +3,15 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>SLITE web presentation</title>
+  <title>Slite: Embedded Website 2</title>
+  <link rel="stylesheet" type="text.css" href="./css/slide.css">
   <style>
     body, html, center {
       margin: 0; padding: 0; height: 100%; overflow: hidden;
     }
   </style>
 </head>
-<body style="margin: 0">
-<center>
-  <div style="width: 700px; height: 1500px; overflow: hidden; margin-top: 150px;">
-    <iframe id='liveStats' src='http://www.worldometers.info' height = 300px; width = 700px scrolling = 'no'  style="position: relative; left: -10%; top: -10%"></iframe>
-  </div>
-  
-</center>
+<body>
+  <iframe style="overflow:hidden" height="100%" width="100%" framborder="3" src="https://www.nyse.com"></iframe>
 </body>
 </html>
