--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/old/img7.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/old/img7.html
@@ -3,8 +3,7 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Live Data</title>
-  <link rel="stylesheet" type="text.css" href="./css/slide.css">
+  <title>SLITE web presentation</title>
   <style>
     body, html, center {
       margin: 0; padding: 0; height: 100%; overflow: hidden;
@@ -13,7 +12,6 @@
 </head>
 <body style="margin: 0">
 <center>
-  <div class="title">FEATURE: Live Data In Slide</div>
   <div style="width: 700px; height: 1500px; overflow: hidden; margin-top: 150px;">
     <iframe id='liveStats' src='http://www.worldometers.info' height = 300px; width = 700px scrolling = 'no'  style="position: relative; left: -10%; top: -10%"></iframe>
   </div>
