--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img16.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img16.html
@@ -3,19 +3,22 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Sharing Diagram</title>
+  <title>Slite: Asking</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-  <style>
-  	li{
-  		padding: 3px;
-  	}
-  </style>
 </head>
 <body>
 <center>
-	<div class="title">SOLUTION: SLITE (SHARE)</div>
+	<div class="title">ASKING</div>
 	<div class="slideBody">
-		<center><img src="../img/Slite_ShareSlide.gif" alt="slite share diagram" style='padding-right:120px'></cetner>
+		<ul>
+	      <li>$500,000 for 9 month</li>
+		      <ul>
+			      <li>$400,000 for software development</li>
+			      <li>$100,000 for fees and infrastructure</li>
+		  	</ul>
+	      <li>Expected Launch: 6 month</li>
+	      <li>Break Even: 18 month</li>
+	  </ul>
 	</div>
 </center>
 </body>
