--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/old/img12.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/old/img12.html
@@ -3,19 +3,18 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Sharing Diagram</title>
+  <title>Slide 4</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-  <style>
-  	li{
-  		padding: 3px;
-  	}
-  </style>
 </head>
 <body>
 <center>
-	<div class="title">SOLUTION: SLITE (SHARE)</div>
+	<div class="title">MONITIZATION</div>
 	<div class="slideBody">
-		<center><img src="../img/Slite_ShareSlide.gif" alt="slite share diagram" style='padding-right:120px'></cetner>
+		<ul>
+	      <li>FREEMEUM</li>
+	      <li>IN SLIDE ADS (350 slides / sec)</li>
+	     <li>ENTERPRISE SOLUTION (B2B)</li>
+		</ul>
 	</div>
 </center>
 </body>
