--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/old/img14.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/old/img14.html
@@ -3,19 +3,22 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Sharing Diagram</title>
+  <title>Slide 4</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-  <style>
-  	li{
-  		padding: 3px;
-  	}
-  </style>
 </head>
 <body>
 <center>
-	<div class="title">SOLUTION: SLITE (SHARE)</div>
+	<div class="title">MARKET</div>
 	<div class="slideBody">
-		<center><img src="../img/Slite_ShareSlide.gif" alt="slite share diagram" style='padding-right:120px'></cetner>
+		<ul>
+	      <li><b>$2.5 BILLION</b> IN 2014</li>
+	      <li>Projected<b>$5 BILLION</b> IN 2016</li>
+	     	<ul>We plan to take 3.5% of the market in 24 month = <b>$175 million</b></ul>
+		</ul>
+
+		<ul>
+			<li>ASKING: <b>$500,000</b> for 9 month</li>
+		</ul>
 	</div>
 </center>
 </body>
