--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -8,10 +8,11 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script src="./js/jquery-1.8.3.js"></script>
     <script src="./js/speechRecognizer.js"></script>
+    <script src="./js/shake.js"></script>
 
     <script>
-      var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
-      //var socket = io.connect('http://localhost:1337');
+      //var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
+      var socket = io.connect('http://192.168.1.167:1337');
     </script>
     <script defer src="./js/LASER_CONTROL_mobile.js"></script>
     
