Separate css for browser client

--- a/BACKEND/FRONTEND/www/A1/client.html
+++ b/BACKEND/FRONTEND/www/A1/client.html
@@ -3,7 +3,7 @@
 	<head>
     <meta charset="utf-8">
 		<title>SENDER</title>
-		<link rel="stylesheet" type="text/css" href="./css/lev_index_temp.css">
+		<link rel="stylesheet" type="text/css" href="./css/lev_index_temp_browser.css">
 		<script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>
 		<!--<script src="http://localhost:1337/socket.io/socket.io.js"></script>-->
     <script src="./js/jquery-1.8.3.js"></script>
