--- a/BACKEND/FRONTEND/www/RECIEVER_POWERPOINT_static.html
+++ b/BACKEND/FRONTEND/www/RECIEVER_POWERPOINT_static.html
@@ -205,7 +205,8 @@
       left:0px;
       top:0px;
       z-index: 2;
-      border: solid blue 1px;
+      border: none;
+      visibility: hidden;
     }
     
     #myCanvas {
