--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -8,7 +8,9 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script src="./js/jquery-1.8.3.js"></script>
     <script src="./js/speechRecognizer.js"></script>
+    <script src="./js/volumeButtonControl.js"></script>
     <script src="./js/shake.js"></script>
+    
 
     <script>
       //var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
