--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" content="user-scalable=yes">
     <title>SENDER</title>
     <link rel="stylesheet" type="text/css" href="./css/lev_index_temp.css">
     <script src="./js/socket.io.js"></script>
