--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -3,25 +3,25 @@
 	<head>
     <meta charset="utf-8">
     <title>SENDER</title>
-    <link rel="stylesheet" type="text/css" href="./css/lev_index_temp.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
     <script src="./js/socket.io.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script src="./js/jquery-1.8.3.js"></script>
     <script src="./js/speechRecognizer.js"></script>
     <script src="./js/volumeButtonControl.js"></script>
     <script src="./js/shake.js"></script>
-    
+    <script src="./js/browserPicker.js"></script>
 
     <script>
       //var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
-      var socket = io.connect('http://192.168.1.167:1337');
+      var socket = io.connect('http://192.168.1.18:1337');
     </script>
-    <script defer src="./js/LASER_CONTROL_mobile.js"></script>
+    <!--<script defer src="./js/LASER_CONTROL.js"></script>-->
     
 	</head>
 <body onload="startup()"
     ><br
-    ><div class="UI topRow leftCol" id="menu">menu</div
+    ><div class="UI topRow leftCol" id="menu">&nbsp;</div
     ><div class="UI topRow midCol" id="URLBox">http://slite.us/<input type="text" value="A1"></div
     ><div class="UI topRow rightCol" id="timeDisplay">Start Timer</div
     ><br
@@ -30,7 +30,7 @@
         ><div id="overlay"></div
         ><iframe id="theIframe" class="frame" src="http://slite.us/A1" seamless></iframe
     ></div
-    ><div class="UI midRow rightCol" id="otherSlides">other</div
+    ><div class="UI midRow rightCol" id="otherSlides">&nbsp;</div
     ><br
     ><div class="UI botRow" id="prev">&nbsp;</div
     ><div class="UI botRow" id="filler">&nbsp;</div
