New Market slide

--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img2.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img2.html
@@ -14,21 +14,19 @@
 <body>
 <center>
 	<div class="title" style='padding-top:10px;padding-bottom:10px;'>MARKET</div>
-	<div class="slideBody" style='padding-top:0px;padding-bottom:10px;float: right; width: 70%'>
-		<ul>
-		  <li>Market</li>
-		  <ul>
-		  	<li>Market: Meeting solutions. Sub-Market: Web Conferencing</li>
-		  	<li>Niche: <b>new young niche</b>: Web Presentations</li> 
-		  </ul>
-	      <li>Size of Web Conferencing market: <b>$2.5 BILLION</b> IN 2014. Projected<b> $5 BILLION</b> IN 2016. 
-	      	<ul><li style='font-size:30px'>Source: Gartner Forecast: Enterprise Software Markets, Worldwide, 2Q13 Update.</li></ul>
-	     <li>target 3.5% of the market in 24 month = <b>$175 million</b></li>
-		</ul>
+	<div class="slideBody" style='with: 100%; padding: 0px'>
+		<div>
+			<img src="../img/slite_market.gif" style='width: 48%; height: 500px; float: left'>
+			<img src="../img/WebConferencing_Market_Forecast.jpg" style='width: 48%; height: 500px; float:right'>
+		</div>
+
+		<div  sytle='clear: both'></div>
+		 
+		 <div style='clear: both; text-align: center; padding-top: 5px;'>     	
+			 <div style='font-size: 25px;'>Source: Gartner Forecast. Enterprise Software Markets, Worldwide, 2Q13 Update.</div>
+		     <div style='padding-top: 0px; margin-top: 2px; margin-bottom: 2px;'>Our Target: 3.5% of the market in 24 month = <b>$175 million</b></div>
+		</div>
 	</div>
-<div id='images' sty;e='float: left; width: 20%'>	
-	<img src="../img/slite_market.gif" style='width: 200px; height: 200px'>
-</div>
 </center>
 </body>
 </html>
