new Asking Slide

--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img16.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img16.html
@@ -19,6 +19,8 @@
 	      <li>Expected Launch: 6 month</li>
 	      <li>Break Even: 18 month</li>
 	  </ul>
+
+	<img src="../img/slite_timeline.jpg" style='width: 800px; height: 300px;'>
 	</div>
 </center>
 </body>
