--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img15.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img15.html
@@ -5,19 +5,89 @@
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
   <title>Slite: Team</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
+  <style type="text/css">
+  	img{
+  		float:left;
+  	}
+.photos ul {
+          list-style: none;
+
+        }
+
+        .photos ul li { 
+            display: inline;
+            list-style: none;
+            float: left;
+            padding: 0 10px 0 0;
+            text-align:center; 
+        }
+
+        .photos ul li span a {
+            background-color: #fff;
+        }
+
+        .photos ul li a {
+
+          display: block;
+          /*
+          margin-right: 10px;
+          margin-bottom: 7px; */
+          -webkit-transition: all 0.3s linear;
+          -moz-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+        }
+        .photos ul li a:hover {
+          opacity: 1.0;
+        }
+
+        .photos ul li a img {
+          border: 6px solid #e1d9ec;
+        } color: #000;
+}
+  </style>
 </head>
 <body>
 <center>
 	<div class="title">TEAM</div>
-	<div class="slideBody">
-		<ul>
+	<div class="slideBody" style='padding-left: 10px'>
+		<ul style='padding-left: 200px;'>
 	      <li>6 PEOPLE</li>
 	      <li>2 PHDs</li>
-	     <li>60+ YRS SOFTWARE, 30+ YRS BUSINESS</li>
+	     <li>60+ YRS SOFTWARE, 30+ YRS BUSINESS (Yahoo!, Microsoft!, KPMG, Arthur Andersen ...)</li>
 	     <li>All located in Silicon Valley</li>
 		</ul>
-		<img src="../img/slite_team_experience_companies.jpg" style='float:right'>
-	</div>
+
+
+
+  <div class="photos" style='font-size: 20px; margin-left:auto; margin-righta:auto'>
+        <ul style='padding-left: 10px; margin-left:0px;'>
+            <li><span><a href="#"><img src="../img/Team_Jim.jpg" width="130" height="150"   /></a></span>
+            <span class='teamMember'>CEO: Jim</span>
+            </li>
+
+            <li><a href="#"><img src="../img/Team_Michael.jpg" width="130" height="150"  /></a>
+            <span class='teamMember'>CTO: Michael</span>
+            </li>
+
+            <li><span><a href="#"><img src="../img/Team_Andrew.jpg" width="130" height="150"   /></a></span>
+            <span class='teamMember'>Business: Andrew</span>
+            </li>
+
+            <li><a href="#"><img src="../img/Team_Lev.jpg" width="130" height="150"  /></a>
+            <span class='teamMember'>Developer: Lev</span>
+            </li>
+            
+			<li><span class='teamMember'><a href="#"><img src="../img/Team_Alla.jpg" width="130" height="150"   /></a></span>
+            <span>Developer: Alla</span>
+            </li>
+
+            <li><span class='teamMember'><a href="#"><img src="../img/Team_Ksenia.jpg" width="130" height="150"   /></a></span>
+            <span>Legal: Ksenia</span>
+            </li>
+        </ul>
+ </div>
+
+
 </center>
 </body>
 </html>
