First version of thumbnails in index.html
Not really thumbnails yet by just buttons to go directly to a slide.
Will add thumb pics later on. Button elements also have to be
dynamically created based on the number of slides.

--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -11,6 +11,7 @@
     <script src="./js/volumeButtonControl.js"></script>
     <script src="./js/shake.js"></script>
     <script src="./js/browserPicker.js"></script>
+    <script src="./js/thumbs.0.6.0.min.js"></script>
 
     <script>
       var socket = io.connect('http://slite.elasticbeanstalk.com:1337');
@@ -30,7 +31,14 @@
         ><div id="overlay"></div
         ><iframe id="theIframe" class="frame" src="http://slite.us/A2" seamless></iframe
     ></div
-    ><div class="UI midRow rightCol" id="otherSlides">&nbsp;</div
+    ><div class="UI midRow rightCol" id="otherSlides">
+        <button>Slide 1</button>
+        <button>Slide 2</button>
+        <button>Slide 3</button>
+        <button>Slide 4</button>
+        <button>Slide 5</button>
+        <button>Slide 6</button
+    ></div
     ><br
     ><div class="UI botRow" id="prev">&nbsp;</div
     ><div class="UI botRow" id="filler">&nbsp;</div
