URL box now works changes the active presentation (A1, A2 etc.)

--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -23,7 +23,7 @@
 <body onload="startup()"
     ><br
     ><div class="UI topRow leftCol" id="menu">&nbsp;</div
-    ><div class="UI topRow midCol" id="URLBox">http://slite.us/<input type="text" value="A2"></div
+    ><div class="UI topRow midCol" id="URLBox">http://slite.us/<input type="text" id="URLSlides" value="A2"></div
     ><div class="UI topRow rightCol" id="timeDisplay">Start Timer</div
     ><br
     ><div class="UI midRow leftCol" id="notes">1: Beginning slide, or should I say 'slite'. Get ready to see powerpoint with all the powers of the web.</div
