--- a/BACKEND/FRONTEND/www/A1/index.html
+++ b/BACKEND/FRONTEND/www/A1/index.html
@@ -244,7 +244,7 @@
 	    	position: fixed;
 	    	bottom: 0px;
 	    	width: 100%;
-	    	height: 10px;
+	    	height: 30px;
 	    	 background-color: #444444;
   			background-image: -webkit-linear-gradient(top, #444444, #999999); /* Chrome 10-25, iOS 5+, Safari 5.1+ */
   			background-image: linear-gradient(to bottom, #444444, #999999); /* Chrome 26, Firefox 16+, IE 10+, Opera */
@@ -336,12 +336,18 @@
 						var slider = $(".royalSlider").data('royalSlider');
 						slider.appendSlide(slide_html);
 					}
+
+
+					$("#video-gallery").css("height","100%");
+					$(".rsOverflow").css("height","100%");
 			});
 
+	
 
 	$('#commentsPanel').click(function(){
 		showHideComments();
 	});
+
 
 	</script>
   
