--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -23,21 +23,21 @@
 <body onload="startup()"
     ><br
     ><div class="UI topRow leftCol" id="menu">&nbsp;</div
-    ><div class="UI topRow midCol" id="URLBox">http://slite.us/<input type="text" id="URLSlides" value="a1"></div
+    ><div class="UI topRow midCol" id="URLBox">http://slite.us/<input type="text" id="URLSlides" value="A1"></div
     ><div class="UI topRow rightCol" id="timeDisplay">Start Timer</div
     ><br
     ><div class="UI midRow leftCol" id="notes">1: Beginning slide, or should I say 'slite'. Get ready to see powerpoint with all the powers of the web.</div
     ><div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)"
         ><div id="overlay"></div
-        ><iframe id="theIframe" class="frame" src="http://slite.us/a1" seamless></iframe
+        ><iframe id="theIframe" class="frame" src="http://slite.us/A1" seamless></iframe
     ></div
     ><div class="UI midRow rightCol" id="otherSlides">
-        <button>Slide 1</button>
-        <button>Slide 2</button>
-        <button>Slide 3</button>
-        <button>Slide 4</button>
-        <button>Slide 5</button>
-        <button>Slide 6</button
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button
     ></div
     ><br
     ><div class="UI botRow" id="prev">&nbsp;</div
