Modified team slide and asking slide

--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img15.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img15.html
@@ -62,27 +62,34 @@
   <div class="photos" style='font-size: 20px; margin-left:auto; margin-righta:auto'>
         <ul style='padding-left: 10px; margin-left:0px;'>
             <li><span><a href="#"><img src="../img/Team_Jim.jpg" width="130" height="150"   /></a></span>
-            <span class='teamMember'>CEO: Jim</span>
+            <div class='teamMember'>CEO: Jim</div>
+            <div class='teamMember'>10 yrs business</div>
+            <div class='teamMember'>15 yrs software</div>
             </li>
 
             <li><a href="#"><img src="../img/Team_Michael.jpg" width="130" height="150"  /></a>
-            <span class='teamMember'>CTO: Michael</span>
+            <div class='teamMember'>CTO: Michael</div>
+            <div class='teamMember'>PhD</div>
             </li>
 
             <li><span><a href="#"><img src="../img/Team_Andrew.jpg" width="130" height="150"   /></a></span>
-            <span class='teamMember'>Business: Andrew</span>
+            <div class='teamMember'>Business: Andrew</div>
+            <div class='teamMember'>PhD</div>
             </li>
 
             <li><a href="#"><img src="../img/Team_Lev.jpg" width="130" height="150"  /></a>
-            <span class='teamMember'>Developer: Lev</span>
+            <div class='teamMember'>Developer: Lev</div>
+            <div class='teamMember'>UC Berkeley</div>
             </li>
             
 			<li><span class='teamMember'><a href="#"><img src="../img/Team_Alla.jpg" width="130" height="150"   /></a></span>
-            <span>Developer: Alla</span>
+            <div class='teamMember'>Developer: Alla</div>
+            <div class='teamMember'>UI expert</div>
             </li>
 
             <li><span class='teamMember'><a href="#"><img src="../img/Team_Ksenia.jpg" width="130" height="150"   /></a></span>
-            <span>Legal: Ksenia</span>
+            <div class='teamMember'>Legal: Ksenia</div>
+            <div class='teamMember'>IP expert</div>
             </li>
         </ul>
  </div>
