--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img16.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img16.html
@@ -11,16 +11,17 @@
 	<div class="title">ASKING</div>
 	<div class="slideBody">
 		<ul>
-	      <li>$500,000 for 9 month</li>
+	      <li>$750,000 for 12 month</li>
 		      <ul>
-			      <li>$400,000 for software development</li>
-			      <li>$100,000 for fees and infrastructure</li>
+			      <li>$500,000 for software development</li>
+			      <li>$100,000 for business development</li>
+			      <li>$150,000 for fees and infrastructure</li>
 		  	</ul>
 	      <li>Expected Launch: 6 month</li>
 	      <li>Break Even: 18 month</li>
 	  </ul>
 
-	<img src="../img/slite_timeline.jpg" style='width: 800px; height: 300px;'>
+	<!--<img src="../img/slite_timeline.jpg" style='width: 800px; height: 300px;'>-->
 	</div>
 </center>
 </body>
