Modified slides. Inserted 1 new slide.

--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img13.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img13.html
@@ -3,18 +3,19 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slide 4</title>
+  <title>Slite: Presnter Control</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
 </head>
 <body>
 <center>
-	<div class="title">SOCIAL</div>
+	<div class="title">FEATURES: PRESENTER CONTROL</div>
+	<div style="font-size:40px; font-weight: bold">smartphone app</div>
 	<div class="slideBody">
 		<ul>
-	      <li>VIDEO CONFERENCING</li>
-	      <li>COMMENTS / DISCUSSIONS (LIVE!)</li>
-	     <li>CLOSED CAPTIONING</li>
-	     <li>LIVE TRANSLATION</li>
+	      <li>LASER POINTER</li>
+	      <li>DRAWING</li>
+	     <li>CLIKCER</li>
+	     <li>VOICE COMMANDS</li>
 		</ul>
 	</div>
 </center>
