--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img16.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img16.html
@@ -3,26 +3,98 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Asking</title>
+  <title>Slite: Team</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
+  <style type="text/css">
+  	img{
+  		float:left;
+  	}
+.photos ul {
+          list-style: none;
+
+        }
+
+        .photos ul li { 
+            display: inline;
+            list-style: none;
+            float: left;
+            padding: 0 10px 0 0;
+            text-align:center; 
+        }
+
+        .photos ul li span a {
+            background-color: #fff;
+        }
+
+        .photos ul li a {
+
+          display: block;
+          /*
+          margin-right: 10px;
+          margin-bottom: 7px; */
+          -webkit-transition: all 0.3s linear;
+          -moz-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+        }
+        .photos ul li a:hover {
+          opacity: 1.0;
+        }
+
+        .photos ul li a img {
+          border: 6px solid #e1d9ec;
+        } color: #000;
+}
+  </style>
 </head>
 <body>
 <center>
-	<div class="title">ASKING</div>
-	<div class="slideBody">
-		<ul>
-	      <li>$750,000 for 12 month</li>
-		      <ul>
-			      <li>$500,000 for software development</li>
-			      <li>$100,000 for business development</li>
-			      <li>$150,000 for fees and infrastructure</li>
-		  	</ul>
-	      <li>Expected Launch: 6 month</li>
-	      <li>Break Even: 18 month</li>
-	  </ul>
+	<div class="title">TEAM</div>
+	<div class="slideBody" style='padding-left: 10px'>
+		<ul style='padding-left: 200px;'>
+	      <li>6 PEOPLE</li>
+	      <li>2 PHDs</li>
+	     <li>60+ YRS SOFTWARE, 30+ YRS BUSINESS (Yahoo!, Microsoft!, KPMG, Arthur Andersen ...)</li>
+	     <li>All located in Silicon Valley</li>
+		</ul>
 
-	<!--<img src="../img/slite_timeline.jpg" style='width: 800px; height: 300px;'>-->
-	</div>
+
+
+  <div class="photos" style='font-size: 20px; margin-left:auto; margin-righta:auto'>
+        <ul style='padding-left: 10px; margin-left:0px;'>
+            <li><span><a href="#"><img src="../img/Team_Jim.jpg" width="130" height="150"   /></a></span>
+            <div class='teamMember'>CEO: Jim</div>
+            <div class='teamMember'>10 yrs business</div>
+            <div class='teamMember'>15 yrs software</div>
+            </li>
+
+            <li><a href="#"><img src="../img/Team_Michael.jpg" width="130" height="150"  /></a>
+            <div class='teamMember'>CTO: Michael</div>
+            <div class='teamMember'>PhD</div>
+            </li>
+
+            <li><span><a href="#"><img src="../img/Team_Andrew.jpg" width="130" height="150"   /></a></span>
+            <div class='teamMember'>Business: Andrew</div>
+            <div class='teamMember'>PhD</div>
+            </li>
+
+            <li><a href="#"><img src="../img/Team_Lev.jpg" width="130" height="150"  /></a>
+            <div class='teamMember'>Developer: Lev</div>
+            <div class='teamMember'>UC Berkeley</div>
+            </li>
+            
+			<li><span class='teamMember'><a href="#"><img src="../img/Team_Alla.jpg" width="130" height="150"   /></a></span>
+            <div class='teamMember'>Developer: Alla</div>
+            <div class='teamMember'>Cherepovets SU</div>
+            </li>
+
+            <li><span class='teamMember'><a href="#"><img src="../img/Team_Ksenia.jpg" width="130" height="150"   /></a></span>
+            <div class='teamMember'>Legal: Ksenia</div>
+            <div class='teamMember'>UC Hastings</div>
+            </li>
+        </ul>
+ </div>
+
+
 </center>
 </body>
 </html>
