--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img2.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img2.html
@@ -23,8 +23,8 @@
 		<div  sytle='clear: both'></div>
 		 
 		 <div style='clear: both; text-align: center; padding-top: 5px;'>     	
-			 <div style='font-size: 25px;'>Source: Gartner Forecast. Enterprise Software Markets, Worldwide, 2Q13 Update.</div>
-		     <div style='padding-top: 0px; margin-top: 2px; margin-bottom: 2px;'>Our Target: 3.5% of the market in 24 month = <b>$175 million</b></div>
+			 <div style='font-size: 20px;'>Source: Gartner Forecast. Enterprise Software Markets, Worldwide, 2Q13 Update.</div>
+		     <div style='padding-top: 0px; margin-top: 2px; margin-bottom: 2px;'>Target: 3.5% of the market in 24 month = <b>$175 million</b></div>
 		</div>
 	</div>
 </center>
