--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img14.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img14.html
@@ -3,24 +3,18 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Business Model and Monitization</title>
+  <title>Slide 4</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
 </head>
 <body>
 <center>
-	<div class="title" style='padding-top: 20px'>BUSINESS MODEL</div>
+	<div class="title">SOCIAL</div>
 	<div class="slideBody">
 		<ul>
-	      <li>SAAS (direct sales from website)</li>
-	      <li>WHITE LABELING (licensing of internal Intranet solution)</li>
-		</ul>
-	</div>
-	<div class="title" style='padding-top: 20px'>MONITIZATION</div>
-	<div class="slideBody">
-		<ul>
-	      <li>FREEMEUM (B2C)</li>
-	      <li>IN SLIDE ADS (350 slides / sec)</li>
-	     <li>SECURED ENTERPRISE SOLUTION PACKAGES (B2B)</li>
+	      <li>VIDEO CONFERENCING</li>
+	      <li>COMMENTS / DISCUSSIONS (LIVE!)</li>
+	     <li>CLOSED CAPTIONING</li>
+	     <li>LIVE TRANSLATION</li>
 		</ul>
 	</div>
 </center>
