--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
@@ -13,16 +13,18 @@
 		<ul>
 		      <li>LOSS OF OPPORTUNITY</li>
 		         <ul>
-		         	<li>can present only in conference room <span style='font-size:30px'>(what if you are at a networking event or in a coffee shop?)</span></li>
+		         	<li>can present only in conference room</li>
 		        </ul>
 		     </li>
-		      <li>LOSS OF TIME (how $ is your time worth?)</li>
+		      <li>UNACCEPTABLE LOSS OF TIME</li>
 			      <ul>
-			      	<li>15% lost on setup instead of content <span style='font-size:30px'>(<b>$11 billion annually</b> in US loss ONLY on setup issues)</span></li>
-			      	<li>A year of your life (avg) is wasted in unproductive meetings</li>
+			      	<li>15% lost on setup instead of content</li>
+			      	<li><span style='font-size:30px'><b>$11 billion annually</b> in US loss ONLY on setup issues</span></li>
+			      	<!--<li>A year of your life (avg) is wasted in unproductive meetings</li>-->
 			      </ul>
-		      <li>LOSS OF INFORMATION DUE TO SLIDE LIMITATION (information = $)</li>
+		      <li>CATASTROFIC LOSS OF INFORMATION</li>
 		      	<ul>
+		      		<li>Due to slide limitations</li>
 		      		<li>Led to Shuttle Discovery disaster</li>
 		      		<li>Not enough information leads to wrong decision!</li>
 		      	</ul>
