--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img7.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/img7.html
@@ -3,15 +3,17 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Embedded Website 1</title>
+  <title>Slite: Features</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
   <style>
-    body, html, center {
-      margin: 0; padding: 0; height: 100%; overflow: hidden;
-    }
+  	ul{
+  		padding-top:0px; padding-bottom: 0px; margin-bottom: 0px;
+  	}
   </style>
 </head>
 <body>
-  <iframe style="overflow:hidden" height="100%" width="100%" framborder="3" src="http://en.wikipedia.org/wiki/Microsoft_PowerPoint"></iframe>
+<center>
+	<div class="title" style='font-size: 80px; height: 100%; padding-top: 100px'>FEATURES!</div>
+</center>
 </body>
 </html>
