--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -16,8 +16,7 @@
     <script src="./js/thumbs.0.6.0.min.js"></script>
 
     <script>
-      //var socket = io.connect('http://slite.elasticbeanstalk.com:1337');
-      var socket = io.connect('http://192.168.1.105:1337');
+      var socket = io.connect('http://slite.elasticbeanstalk.com:1337');
     </script>
     
 	</head>
