Fixed draw line being blurry

--- a/BACKEND/FRONTEND/www/A2/index.html
+++ b/BACKEND/FRONTEND/www/A2/index.html
@@ -226,7 +226,7 @@
 	    
 	    #drawCanvas {
 	      position: absolute;
-	      border: solid black 1px;
+	      border: none;
 	      z-index: 1;
 	      pointer-events: none;
 	    }
