--- a/BACKEND/FRONTEND/www/A2/index.html
+++ b/BACKEND/FRONTEND/www/A2/index.html
@@ -30,8 +30,8 @@
 
 	<script>
         
-    //var socket = io.connect('http://slite-dev.elasticbeanstalk.com:1337');
-    var socket = io.connect('http://localhost:1337');
+    var socket = io.connect('http://slite-dev.elasticbeanstalk.com:1337');
+    //var socket = io.connect('http://localhost:1337');
     
     socket.on('news', function (data) {	
 
