Added a panel for video chat. Changed some web css

--- a/WEBSITE/index.html
+++ b/WEBSITE/index.html
@@ -14,7 +14,8 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/screen.css">
+        <link rel="stylesheet" href="css/screen.css">		
+        <script src="js/jquery-2.1.1.min.js"></script>
 
         <!--<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>-->
 
@@ -106,8 +107,8 @@
             </div>
         </section>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/jquery-2.1.1.min.js"><\/script>')</script>
+        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/jquery-2.1.1.min.js"><\/script>')</script>-->
         <script src="js/bootstrap.js"></script>
         <!--<script src="js/holder.js"></script>-->
         <script src="js/main.js"></script>
