Updated drawing on A1
Drawing was working better on A2 (still not perfect), so I pushed the
changes to A1.

--- a/BACKEND/FRONTEND/www/A1/index.html
+++ b/BACKEND/FRONTEND/www/A1/index.html
@@ -227,10 +227,8 @@
 	      z-index: 2;
 	    }
 	    
-	    #myCanvas {
+	    #drawCanvas {
 	      position: absolute;
-	      height: 100%;
-	      width: 100%;
 	      border: none;
 	      z-index: 1;
 	      pointer-events: none;
@@ -270,7 +268,7 @@
 
 <body onresize="resizeCanvas()" onkeydown="disableArrowKeys(event)">
 
-    <canvas id="myCanvas" ></canvas>
+    <canvas id="drawCanvas" ></canvas>
     
 	<div id="sliteWatermak">Powered by SLITE.US</div>
 
