new slides in deck

--- a/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img4.html
+++ b/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img4.html
@@ -23,10 +23,10 @@
 		<ul>
 	      <li>ONLINE PORTAL FOR <u>LIVE</u> PRESENTATIONS</li>
 	         <ul>
-	           <li>create</li>
+	           <li>upload, create</li>
 			   <li>present to the whole world live</li>
 			   <li>interact: comment, vote, like, share</li> 
-			   <li>stored notes with presentation</li>
+			   <li>store notes with presentation</li>
 	        </ul>
 	      <!--<li>NEW <b>PATENTED</b> PARADIGM!</li>
 		      <ul>
