--- a/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
+++ b/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
@@ -23,7 +23,7 @@
 			      	<li><span style='font-size:30px'><b>$11 billion annually</b> in US loss ONLY on setup issues</span></li>
 			      	<li>A year of your life (avg) is wasted in unproductive meetings</li>-->
 			      </ul>
-				<li>No necessary for business Web 2.0 features</li>
+				<li>No necessary-for-business Web 2.0 features</li>
 		      	<ul style='font-size:30px;'>
 		      		<li>Commenting, Interactive, Sharing</li>
 		      	</ul>
