--- a/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img6.html
+++ b/WEBSITE/a1/PPT/SliteShow_PitchDeck.pptx.html/img6.html
@@ -18,7 +18,7 @@
 		<ul>
 		  <li>PATENT</li>
 			  <ul>
-			  	<li>allows to do features in days vs. competitors months/years</li>
+			  	<li>allows implementing features in days vs. competitors months/years</li>
 			  </ul>
 			<li>10+ years producing shows</li>
 			<li>Competitors whose <b>sole business</b> is <b>one</b> of our features:</li>
